fixed text overflow hidden on relax.html

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
   grid-row-gap: 25px;
   margin: 5px;
   padding: 10px;
-  background-color: #fff;
 }
 
 .AboutMe {
